--- a/src/protocol/develop/actions/G5 - Result.yaml
+++ b/src/protocol/develop/actions/G5 - Result.yaml
@@ -32,7 +32,7 @@ fields:
 
   - name: AssetSpecificVote
     label: Asset Specific Vote
-    description: "1 - Yes, 0 - No.  No Asset Type/AssetCode subfields for N - No."
+    description: "When true this proposal is specific to an asset and the asset type and asset code fields are serialized."
     type: bool
 
   - name: AssetType
