--- a/src/messages/develop/0002 - Public Message.yaml
+++ b/src/messages/develop/0002 - Public Message.yaml
@@ -2,7 +2,7 @@
 # Public Message: Generic public message or public announcement. Sent to an address(es).  Can be used for an official issuer announcement.
 #
 
-code: '0002'
+code: 2
 
 metadata:
   name: PublicMessage
@@ -17,7 +17,7 @@ fields:
     size: 1
     example: 0
     computed: true
-    
+
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
