--- a/src/messages/develop/0003 - Private Message.yaml
+++ b/src/messages/develop/0003 - Private Message.yaml
@@ -2,7 +2,7 @@
 # Private Message: Generic private message. Sent to another address(es). Encryption is to be used.
 #
 
-code: '0003'
+code: 3
 
 metadata:
   name: PrivateMessage
@@ -17,7 +17,7 @@ fields:
     size: 1
     example: 0
     computed: true
-    
+
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
