--- a/src/messages/develop/1002 - Signature Request.yaml
+++ b/src/messages/develop/1002 - Signature Request.yaml
@@ -2,7 +2,7 @@
 # Signature Request: Partially-signed transactions (Tokenized actions, Bitcoin, Multisig, Threshold Signatures, etc.) can be passed around on-chain to the parties (including Smart Contracts) that still have to sign the transaction.
 #
 
-code: '1002'
+code: 1002
 
 metadata:
   name: SignatureRequest
