--- a/src/protocol/develop/actions/A1 - Asset Definition.yaml
+++ b/src/protocol/develop/actions/A1 - Asset Definition.yaml
@@ -66,7 +66,7 @@ fields:
   - name: TradeRestrictions
     label: Trade Restrictions
     description: "Asset can only be traded within the trade restrictions.  Eg. AUS - Australian residents only.  EU - European Union residents only."
-    type: Polity
+    type: Polities
     example_hex: 474252
     example_value: "GBR"
     notes: ""
