--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -52,6 +52,9 @@ fields:
     example_hex: 01
     example_value: "1"
     notes: "Body of Agreement - Amendments can be restricted to a vote."
+    int_values:
+      - 1
+      - 2
 
   - name: BodyOfAgreement
     label: Body of Agreement
@@ -81,6 +84,8 @@ fields:
     example_hex: 01
     example_value: "1"
     notes: "The file type of the supporting documents ('attached') that are important to the contract."
+    int_values:
+      - 1
 
   - name: SupportingDocs
     label: Supporting Documentation
