--- a/src/protocol/develop/actions/A2 - Asset Creation.yaml
+++ b/src/protocol/develop/actions/A2 - Asset Creation.yaml
@@ -66,7 +66,8 @@ fields:
   - name: TradeRestrictions
     label: Trade Restrictions
     description: "Asset can only be traded within the trade restrictions.  Eg. AUS - Australian residents only.  EU - European Union residents only."
-    type: Polities
+    type: Polity[]
+    size: 16
     example_hex: 474252
     example_value: "GBR"
     notes: ""
@@ -78,6 +79,11 @@ fields:
     example_hex: 01
     example_value: 1
     notes: ""
+
+  - name: VotingRights
+    label: Voting Rights
+    description: "When false holders of this asset will not be able to vote for tokens of this asset even on voting systems in which vote multiplers are not permitted."
+    type: bool
 
   - name: VoteMultiplier
     label: Vote Multiplier
