--- a/src/protocol/develop/types/Amendment.yaml
+++ b/src/protocol/develop/types/Amendment.yaml
@@ -24,9 +24,18 @@ fields:
 
   - name: SubfieldIndex
     label: Subfield Index
-    description: "Index of the subfield to be amended. This only applies to specific fields of an element in an array. This is used to specify which field of the array element the amendment applies to."
+    description: "Index of the subfield to be amended. This only applies to specific fields containing complex types with subfields. This is used to specify which field of the object the amendment applies to."
     type: uint
     size: 1
+    example_hex: 01
+    example_value: 1
+    notes: "For example to specify the 2nd field of a VotingSystem, value 1 would be given."
+
+  - name: SubfieldElement
+    label: Subfield Element
+    description: "Specifies the element of the complex array type to be amended. This only applies to array types, and has no meaning for a simple type such as uint64, string, byte or byte[]. Specifying a value > 0 for a simple type will result in a Rejection."
+    type: uint
+    size: 2
     example_hex: 01
     example_value: 1
     notes: "For example to specify the 2nd field of a VotingSystem, value 1 would be given."
@@ -45,7 +54,7 @@ fields:
 
   - name: Data
     label: Data
-    description: "New data for the amended subfield. Data type depends on the the type of the field being amended."
-    type: varchar
+    description: "New data for the amended subfield. Data type depends on the the type of the field being amended. The value should be serialize as defined by the protocol."
+    type: varbin
     size: 32
     notes: "The bytes should be in an format appropriate for the field being modified."
